ghc-4335c07/testsuite/tests/rename/should_compile/Rn065A.hs

module Rn065A where

data T = T { a :: Int }
