ghc-4335c07/testsuite/tests/rename/should_fail/T5372a.hs
module T5372a where
data S = MkS { x :: Int, y :: Bool }
